<resources>
    <string name="app_name">唱功</string>
    <string name="start_test">开始测试</string>
    <string name="reset_test">重新测试</string>
    <string name="next">下一关</string>
    <string name="test_finsih">完成测试</string>
    <string name="create_result">生成测试结果</string>
    <string name="score">分</string>
    <string name="high_pitch">高音测试</string>
    <string name="low_pitch">低音测试</string>
    <string name="intonation_pitch">音准测试</string>
    <string name="breath_pitch">气息测试</string>
    <string name="rhythm_pitch">节奏测试</string>
    <string name="voice_test_result">声音测试结果</string>
    <string name="network_error">网络错误,请检测网络</string>
    <string name="analyze_voice">我们正在为您的声音做分析</string>


    <!--pickerview  start-->
    <string name="pickerview_cancel">取消</string>
    <string name="pickerview_submit">确定</string>
    <string name="pickerview_year">年</string>
    <string name="pickerview_month">月</string>
    <string name="pickerview_day">日</string>
    <string name="pickerview_hours">时</string>
    <string name="pickerview_minutes">分</string>
    <string name="pickerview_seconds">秒</string>

    <string name="share_to">分享至站外</string>
    <string name="wechat">微信</string>
    <string name="weibo">微博</string>
    <string name="link">链接</string>
    <string name="wechat_circle">朋友圈</string>
    <string name="qq">QQ</string>
    <string name="qzone">QQ空间</string>
    <string name="cancel">取消</string>
</resources>
