<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/share_to"
        android:textColor="@color/color_858585"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_e6e6e6" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/wechat_layout"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">


            <ImageView
                android:layout_width="54dp"
                android:layout_height="54dp"
                android:src="@drawable/ic_wechat_friend" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wechat"
                android:textColor="@color/color_858585"
                android:textSize="13dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/wechat_circle_layout"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="54dp"
                android:layout_height="54dp"
                android:src="@drawable/ic_wechat_circle" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wechat_circle"
                android:textColor="@color/color_858585"
                android:textSize="13dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/qq_layout"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="54dp"
                android:layout_height="54dp"
                android:src="@drawable/ic_qq" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qq"
                android:textColor="@color/color_858585"
                android:textSize="13dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/qzone_layout"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="54dp"
                android:layout_height="54dp"
                android:src="@drawable/ic_qzone" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qzone"
                android:textColor="@color/color_858585"
                android:textSize="13dp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/weibo_layout"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">


            <ImageView
                android:layout_width="54dp"
                android:layout_height="54dp"
                android:src="@drawable/ic_weibo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weibo"
                android:textColor="@color/color_858585"
                android:textSize="13dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/link_layout"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">


            <ImageView
                android:layout_width="54dp"
                android:layout_height="54dp"
                android:src="@drawable/ic_link" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/link"
                android:textColor="@color/color_858585"
                android:textSize="13dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" />

        <LinearLayout
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_e6e6e6" />

    <TextView
        android:id="@+id/cancel_tv"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/selector_cancel"
        android:gravity="center"
        android:padding="0px"
        android:text="@string/cancel"
        android:textSize="16sp" />

</LinearLayout>