<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_test_result" />

    <RelativeLayout
        android:id="@+id/title_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/voice_test_result"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/share_iv"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:src="@drawable/ic_share" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/title_layout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/avatar_iv"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/ic_women" />

            <TextView
                android:id="@+id/name_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:text="爵士名伶"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/score_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="440"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/score"
                    android:textColor="@color/white50"
                    android:textSize="14sp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="20dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/high_pitch"
                    android:textColor="@color/white50"
                    android:textSize="14sp" />

                <ProgressBar
                    android:id="@+id/high_progressBar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="0px"
                    android:layout_height="10dp"
                    android:layout_marginLeft="6dp"
                    android:layout_marginRight="6dp"
                    android:layout_weight="1"
                    android:max="100"
                    android:progress="50"
                    android:progressDrawable="@drawable/horizontal_bar" />

                <TextView
                    android:id="@+id/high_score_tv"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="50分"
                    android:textColor="@color/white50"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/low_pitch"
                    android:textColor="@color/white50"
                    android:textSize="14sp" />

                <ProgressBar
                    android:id="@+id/low_progressBar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="0px"
                    android:layout_height="10dp"
                    android:layout_marginLeft="6dp"
                    android:layout_marginRight="6dp"
                    android:layout_weight="1"
                    android:max="100"
                    android:progress="50"
                    android:progressDrawable="@drawable/horizontal_bar" />

                <TextView
                    android:id="@+id/low_score_tv"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="50分"
                    android:textColor="@color/white50"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/intonation_pitch"
                    android:textColor="@color/white50"
                    android:textSize="14sp" />

                <ProgressBar
                    android:id="@+id/intonation_progressBar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="0px"
                    android:layout_height="10dp"
                    android:layout_marginLeft="6dp"
                    android:layout_marginRight="6dp"
                    android:layout_weight="1"
                    android:max="100"
                    android:progress="50"
                    android:progressDrawable="@drawable/horizontal_bar" />

                <TextView
                    android:id="@+id/intonation_score_tv"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="50分"
                    android:textColor="@color/white50"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/breath_pitch"
                    android:textColor="@color/white50"
                    android:textSize="14sp" />

                <ProgressBar
                    android:id="@+id/breath_progressBar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="0px"
                    android:layout_height="10dp"
                    android:layout_marginLeft="6dp"
                    android:layout_marginRight="6dp"
                    android:layout_weight="1"
                    android:max="100"
                    android:progress="50"
                    android:progressDrawable="@drawable/horizontal_bar" />

                <TextView
                    android:id="@+id/breath_score_tv"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="50分"
                    android:textColor="@color/white50"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rhythm_pitch"
                    android:textColor="@color/white50"
                    android:textSize="14sp" />

                <ProgressBar
                    android:id="@+id/rhythm_progressBar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="0px"
                    android:layout_height="10dp"
                    android:layout_marginLeft="6dp"
                    android:layout_marginRight="6dp"
                    android:layout_weight="1"
                    android:max="100"
                    android:progress="50"
                    android:progressDrawable="@drawable/horizontal_bar" />

                <TextView
                    android:id="@+id/rhythm_score_tv"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="50分"
                    android:textColor="@color/white50"
                    android:textSize="14sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/desc_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="20dp"
                android:lineSpacingMultiplier="1.2"
                android:text="这里是测试结果这里是测试结果这里是测试结果这里是测试结果这里是测试结果这里是测试结果这里是测试结果这里是测试结果这里是测试结果这里是测试结果这里是测试结果这里是测试结果这里是测试结果这里是测试结果这里是测试结果这里是测试结果这里是测试结果这里是测试结果"
                android:textColor="@color/white50" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/reset_test_btn"
                    style="?borderlessButtonStyle"
                    android:layout_width="0px"
                    android:layout_height="match_parent"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/selector_reset"
                    android:padding="0px"
                    android:text="@string/reset_test"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/finish_btn"
                    style="?borderlessButtonStyle"
                    android:layout_width="0px"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/selector_white_btn"
                    android:padding="0px"
                    android:text="@string/test_finsih"
                    android:textColor="@color/color_ff9437"
                    android:textSize="14sp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>